crates/mappa/tests/snapshots/contract__verb_add_fresh.snap
---
source: crates/mappa/tests/contract.rs
expression: pretty(&fresh)
---
{
  "core": "mappa",
  "data": {
    "coordinates": {
      "lat": 59.3293,
      "lon": 18.0686
    },
    "timezone": "Europe/Stockholm"
  },
  "home": "clu",
  "kind": "location",
  "refs": [],
  "slug": "kafe_esaias"
}
