crates/mappa/tests/snapshots/contract__verb_add_overwrite_applied.snap
---
source: crates/mappa/tests/contract.rs
expression: pretty(&applied)
---
{
  "core": "mappa",
  "data": {
    "address": "Frejgatan 1"
  },
  "home": "clu",
  "kind": "location",
  "refs": [],
  "slug": "kafe_esaias"
}
