crates/mappa/tests/snapshots/contract__verb_move.snap
---
source: crates/mappa/tests/contract.rs
expression: pretty(&moved)
---
{
  "moved": {
    "from": "clh",
    "to": "clu"
  },
  "record": {
    "core": "mappa",
    "data": {},
    "home": "clu",
    "kind": "location",
    "refs": [],
    "slug": "the_studio"
  }
}
