crates/mappa/tests/snapshots/contract__verb_rm.snap
---
source: crates/mappa/tests/contract.rs
expression: pretty(&deleted)
---
{
  "deleted": "the_studio"
}
